Added custom authentication failure messages to login form

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,3 +1,7 @@
 # login form
 loginForm.field.username.error.notNull.message=Email can not be empty
 loginForm.field.password.error.notNull.message=Password can not be empty
+loginForm.exception.BadCredentialsException.message=Invalid username or password
+loginForm.exception.DisabledException.message=User account has not been activated yet
+loginForm.exception.LockedException.message=User account has been blocked
+loginForm.exception.unknownError.message=Unknown error
