--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -1,3 +1,7 @@
 # login form
 loginForm.field.username.error.notNull.message=Email nie mo\u017Ce by\u0107 pusty
 loginForm.field.password.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+loginForm.exception.BadCredentialsException.message=Nieprawid\u0142owa nazwa u\u017Cytkownika lub has\u0142o
+loginForm.exception.DisabledException.message=Konto u\u017Cytkownika nie zosta\u0142o jeszcze aktywowane
+loginForm.exception.LockedException.message=Konto u\u017Cytkownika zosta\u0142o zablokowane
+loginForm.exception.unknownError.message=Nieznany b\u0142\u0105d
