Created registration form

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -5,3 +5,21 @@ loginForm.exception.BadCredentialsException.message=Invalid username or password
 loginForm.exception.DisabledException.message=User account has not been activated yet
 loginForm.exception.LockedException.message=User account has been blocked
 loginForm.exception.unknownError.message=Unknown error
+# other forms
+form.field.firstName.error.notNull.message=First name can not be empty
+form.field.firstName.error.notEmpty.message=First name can not be empty
+form.field.firstName.error.size.message=First name must be at least {min} characters long and not more than {max}
+form.field.lastName.error.notNull.message=Last name can not be empty
+form.field.lastName.error.notEmpty.message=Last name can not be empty
+form.field.lastName.error.size.message=Last name must be at least {min} characters long and not more than {max}
+form.field.email.error.notNull.message=Email can not be empty
+form.field.email.error.notEmpty.message=Email can not be empty
+form.field.email.error.incorrectEmail.message=Email address is incorrect
+form.field.email.error.emailIsInUse.message=This email address is already being used
+form.field.password.error.notNull.message=Password can not be empty
+form.field.password.error.notEmpty.message=Password can not be empty
+form.field.password.error.size.message=Password must be at least {min} characters long and not more than {max}
+form.field.confirmPassword.error.notNull.message=Password can not be empty
+form.field.confirmPassword.error.notEmpty.message=Password can not be empty
+form.field.confirmPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
+form.field.confirmPassword.error.unmatchedPasswordValue.message=Typed passwords do not match
