--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -5,3 +5,21 @@ loginForm.exception.BadCredentialsException.message=Nieprawid\u0142owa nazwa u\u
 loginForm.exception.DisabledException.message=Konto u\u017Cytkownika nie zosta\u0142o jeszcze aktywowane
 loginForm.exception.LockedException.message=Konto u\u017Cytkownika zosta\u0142o zablokowane
 loginForm.exception.unknownError.message=Nieznany b\u0142\u0105d
+# other forms
+form.field.firstName.error.notNull.message=Imi\u0119 nie mo\u017Ce by\u0107 puste
+form.field.firstName.error.notEmpty.message=Imi\u0119 nie mo\u017Ce by\u0107 puste
+form.field.firstName.error.size.message=Imi\u0119 musi mie\u0107 przynajmniej {min} znaki i nie wi\u0119cej ni\u017C {max}
+form.field.lastName.error.notNull.message=Nazwisko nie mo\u017Ce by\u0107 puste
+form.field.lastName.error.notEmpty.message=Nazwisko nie mo\u017Ce by\u0107 puste
+form.field.lastName.error.size.message=Nazwisko musi mie\u0107 przynajmniej {min} znaki i nie wi\u0119cej ni\u017C {max}
+form.field.email.error.notNull.message=Email nie mo\u017Ce by\u0107 pusty
+form.field.email.error.notEmpty.message=Email nie mo\u017Ce by\u0107 pusty
+form.field.email.error.incorrectEmail.message=Adres email jest nieprawid\u0142owy
+form.field.email.error.emailIsInUse.message=Ten adres email jest ju\u017C w u\u017Cyciu
+form.field.password.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.password.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.password.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
+form.field.confirmPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
+form.field.confirmPassword.error.unmatchedPasswordValue.message=Podane has\u0142a r\u00F3\u017Cni\u0105 si\u0119 od siebie
