Added user profile

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -12,6 +12,8 @@ form.field.firstName.error.size.message=First name must be at least {min} charac
 form.field.lastName.error.notNull.message=Last name can not be empty
 form.field.lastName.error.notEmpty.message=Last name can not be empty
 form.field.lastName.error.size.message=Last name must be at least {min} characters long and not more than {max}
+form.field.dateOfBirth.error.notNull.message=Date of birth can not be empty
+form.field.dateOfBirth.error.notEmpty.message=Date of birth can not be empty
 form.field.email.error.notNull.message=Email can not be empty
 form.field.email.error.notEmpty.message=Email can not be empty
 form.field.email.error.incorrectEmail.message=Email address is incorrect
