--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -12,6 +12,8 @@ form.field.firstName.error.size.message=Imi\u0119 musi mie\u0107 przynajmniej {m
 form.field.lastName.error.notNull.message=Nazwisko nie mo\u017Ce by\u0107 puste
 form.field.lastName.error.notEmpty.message=Nazwisko nie mo\u017Ce by\u0107 puste
 form.field.lastName.error.size.message=Nazwisko musi mie\u0107 przynajmniej {min} znaki i nie wi\u0119cej ni\u017C {max}
+form.field.dateOfBirth.error.notNull.message=Data urodzenia nie mo\u017Ce by\u0107 pusta
+form.field.dateOfBirth.error.notEmpty.message=Data urodzenia nie mo\u017Ce by\u0107 pusta
 form.field.email.error.notNull.message=Email nie mo\u017Ce by\u0107 pusty
 form.field.email.error.notEmpty.message=Email nie mo\u017Ce by\u0107 pusty
 form.field.email.error.incorrectEmail.message=Adres email jest nieprawid\u0142owy
