Added handling custom exceptions

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -25,3 +25,6 @@ form.field.confirmPassword.error.notNull.message=Password can not be empty
 form.field.confirmPassword.error.notEmpty.message=Password can not be empty
 form.field.confirmPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Typed passwords do not match
+# exceptions
+exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
+exception.otherException.message=Internal server error
