Added user table

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -27,4 +27,5 @@ form.field.confirmPassword.error.size.message=Password must be at least {min} ch
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Typed passwords do not match
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
+exception.AppUserNotFoundException.message=User was not found
 exception.otherException.message=Internal server error
