--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -27,4 +27,5 @@ form.field.confirmPassword.error.size.message=Has\u0142o musi mie\u0107 przynajm
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Podane has\u0142a r\u00F3\u017Cni\u0105 si\u0119 od siebie
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
+exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
