Added edit user profile option to user settings

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -25,7 +25,14 @@ form.field.confirmPassword.error.notNull.message=Password can not be empty
 form.field.confirmPassword.error.notEmpty.message=Password can not be empty
 form.field.confirmPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Typed passwords do not match
+form.field.image.error.invalidFileType.message=Only files with the following extensions are allowed: jpeg, jpg, png
+form.field.image.error.invalidImageSize.message=The image is too large, the maximum dimensions are {width}x{height} pixels
+form.field.image.error.invalidFileSize.message=File size is greater than 2 MB
+form.field.city.error.size.message=City can be up to {max} characters long
+form.field.bio.error.size.message=Bio can be up to {max} characters long
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
 exception.otherException.message=Internal server error
+# alert
+user.userProfileEditForm.profileUpdated.message=Profile has been updated
