--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -25,7 +25,14 @@ form.field.confirmPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u01
 form.field.confirmPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.confirmPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Podane has\u0142a r\u00F3\u017Cni\u0105 si\u0119 od siebie
+form.field.image.error.invalidFileType.message=Dozwolone s\u0105 tylko pliki z nast\u0119puj\u0105cymi rozszerzeniami: jpeg, jpg, png
+form.field.image.error.invalidImageSize.message=Obraz jest za du\u017Cy, maksymalne wymiary to {width}x{height} pikseli
+form.field.image.error.invalidFileSize.message=Rozmiar pliku jest wi\u0119kszy ni\u017C 2 MB
+form.field.city.error.size.message=Miasto mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
+form.field.bio.error.size.message=Biogram mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
+# alert
+user.userProfileEditForm.profileUpdated.message=Profil zosta\u0142 zaktualizowany
