[Admin Panel] Added edit user profile option

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -35,4 +35,5 @@ exception.DefaultProfileImageNotFoundException.message=Failed to create an accou
 exception.AppUserNotFoundException.message=User was not found
 exception.otherException.message=Internal server error
 # alert
+admin.adminUserProfileEditForm.profileUpdated.message=User profile has been updated
 user.userProfileEditForm.profileUpdated.message=Profile has been updated
