--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -35,4 +35,5 @@ exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 u
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
 # alert
+admin.adminUserProfileEditForm.profileUpdated.message=Profil u\u017Cytkownika zosta\u0142 zaktualizowany
 user.userProfileEditForm.profileUpdated.message=Profil zosta\u0142 zaktualizowany
