Added edit user password option to user settings

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -30,6 +30,16 @@ form.field.image.error.invalidImageSize.message=The image is too large, the maxi
 form.field.image.error.invalidFileSize.message=File size is greater than 2 MB
 form.field.city.error.size.message=City can be up to {max} characters long
 form.field.bio.error.size.message=Bio can be up to {max} characters long
+form.field.newPassword.error.notNull.message=Password can not be empty
+form.field.newPassword.error.notEmpty.message=Password can not be empty
+form.field.newPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
+form.field.confirmNewPassword.error.notNull.message=Password can not be empty
+form.field.confirmNewPassword.error.notEmpty.message=Password can not be empty
+form.field.confirmNewPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
+form.field.currentPassword.error.notNull.message=Password can not be empty
+form.field.currentPassword.error.notEmpty.message=Password can not be empty
+form.field.currentPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
+form.field.currentPassword.error.invalidCurrentPassword.message=Invalid password
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
@@ -37,3 +47,4 @@ exception.otherException.message=Internal server error
 # alert
 admin.adminUserProfileEditForm.profileUpdated.message=User profile has been updated
 user.userProfileEditForm.profileUpdated.message=Profile has been updated
+user.userPasswordEditForm.passwordUpdated.message=Password has been updated
