--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -30,6 +30,16 @@ form.field.image.error.invalidImageSize.message=Obraz jest za du\u017Cy, maksyma
 form.field.image.error.invalidFileSize.message=Rozmiar pliku jest wi\u0119kszy ni\u017C 2 MB
 form.field.city.error.size.message=Miasto mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
 form.field.bio.error.size.message=Biogram mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
+form.field.newPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.newPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.newPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
+form.field.confirmNewPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmNewPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmNewPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
+form.field.currentPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.currentPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.currentPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
+form.field.currentPassword.error.invalidCurrentPassword.message=Has\u0142o nieprawid\u0142owe
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
@@ -37,3 +47,4 @@ exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
 # alert
 admin.adminUserProfileEditForm.profileUpdated.message=Profil u\u017Cytkownika zosta\u0142 zaktualizowany
 user.userProfileEditForm.profileUpdated.message=Profil zosta\u0142 zaktualizowany
+user.userPasswordEditForm.passwordUpdated.message=Has\u0142o zosta\u0142o zaktualizowane
