[Admin Panel] Added edit user password option

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -30,6 +30,9 @@ form.field.image.error.invalidImageSize.message=The image is too large, the maxi
 form.field.image.error.invalidFileSize.message=File size is greater than 2 MB
 form.field.city.error.size.message=City can be up to {max} characters long
 form.field.bio.error.size.message=Bio can be up to {max} characters long
+form.field.adminPassword.error.notNull.message=Password can not be empty
+form.field.adminPassword.error.notEmpty.message=Password can not be empty
+form.field.adminPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.newPassword.error.notNull.message=Password can not be empty
 form.field.newPassword.error.notEmpty.message=Password can not be empty
 form.field.newPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
@@ -46,5 +49,6 @@ exception.AppUserNotFoundException.message=User was not found
 exception.otherException.message=Internal server error
 # alert
 admin.adminUserProfileEditForm.profileUpdated.message=User profile has been updated
+admin.adminUserPasswordEditForm.passwordUpdated.message=User password has been updated
 user.userProfileEditForm.profileUpdated.message=Profile has been updated
 user.userPasswordEditForm.passwordUpdated.message=Password has been updated
