--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -30,6 +30,9 @@ form.field.image.error.invalidImageSize.message=Obraz jest za du\u017Cy, maksyma
 form.field.image.error.invalidFileSize.message=Rozmiar pliku jest wi\u0119kszy ni\u017C 2 MB
 form.field.city.error.size.message=Miasto mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
 form.field.bio.error.size.message=Biogram mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
+form.field.adminPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.adminPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.adminPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.newPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.newPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.newPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
@@ -46,5 +49,6 @@ exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znale
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
 # alert
 admin.adminUserProfileEditForm.profileUpdated.message=Profil u\u017Cytkownika zosta\u0142 zaktualizowany
+admin.adminUserPasswordEditForm.passwordUpdated.message=Has\u0142o u\u017Cytkownika zosta\u0142o zaktualizowane
 user.userProfileEditForm.profileUpdated.message=Profil zosta\u0142 zaktualizowany
 user.userPasswordEditForm.passwordUpdated.message=Has\u0142o zosta\u0142o zaktualizowane
