[Admin Panel] Added edit user account option

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -43,11 +43,13 @@ form.field.currentPassword.error.notNull.message=Password can not be empty
 form.field.currentPassword.error.notEmpty.message=Password can not be empty
 form.field.currentPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Invalid password
+form.field.roles.error.notEmpty.message=User has to have at least one role
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
 exception.otherException.message=Internal server error
 # alert
+admin.adminUserAccountEditForm.accountUpdated.message=User account has been updated
 admin.adminUserProfileEditForm.profileUpdated.message=User profile has been updated
 admin.adminUserPasswordEditForm.passwordUpdated.message=User password has been updated
 user.userProfileEditForm.profileUpdated.message=Profile has been updated
