--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -43,11 +43,13 @@ form.field.currentPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u01
 form.field.currentPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.currentPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Has\u0142o nieprawid\u0142owe
+form.field.roles.error.notEmpty.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
 # alert
+admin.adminUserAccountEditForm.accountUpdated.message=Konto u\u017Cytkownika zosta\u0142o zaktualizowane
 admin.adminUserProfileEditForm.profileUpdated.message=Profil u\u017Cytkownika zosta\u0142 zaktualizowany
 admin.adminUserPasswordEditForm.passwordUpdated.message=Has\u0142o u\u017Cytkownika zosta\u0142o zaktualizowane
 user.userProfileEditForm.profileUpdated.message=Profil zosta\u0142 zaktualizowany
