Added search bar to event list

--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -48,6 +48,7 @@ form.field.roles.error.notEmpty.message=U\u017Cytkownik musi mie\u0107 przynajmn
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
 exception.EventNotFoundException.message=Wydarzenie nie zosta\u0142o znalezione
+exception.CityNotFoundException.message=Wygl\u0105da na to, \u017Ce ta strona nie istnieje.
 exception.otherException.message=Wewn\u0119trzny b\u0142\u0105d serwera
 # alert
 admin.adminUserAccountEditForm.accountUpdated.message=Konto u\u017Cytkownika zosta\u0142o zaktualizowane
