--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -48,6 +48,7 @@ form.field.roles.error.notEmpty.message=User has to have at least one role
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
 exception.EventNotFoundException.message=Event was not found
+exception.CityNotFoundException.message=It looks like this page does not exist.
 exception.otherException.message=Internal server error
 # alert
 admin.adminUserAccountEditForm.accountUpdated.message=User account has been updated
