[Organizer Panel] Added create event option

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -44,6 +44,25 @@ form.field.currentPassword.error.notEmpty.message=Password can not be empty
 form.field.currentPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Invalid password
 form.field.roles.error.notEmpty.message=User has to have at least one role
+# events
+form.field.name.error.notNull.message=Name can not be empty
+form.field.name.error.notEmpty.message=Name can not be empty
+form.field.eventType.error.notNull.message=Event type can not be empty
+form.field.eventType.error.notEmpty.message=Event type can not be empty
+form.field.dateTime.error.notNull.message=Date and time can not be empty
+form.field.dateTime.error.notEmpty.message=Date and time can not be empty
+form.field.language.error.notNull.message=Language can not be empty
+form.field.language.error.notEmpty.message=Language can not be empty
+form.field.admission.error.notNull.message=Admission can not be empty
+form.field.admission.error.notEmpty.message=Admission can not be empty
+form.field.city.error.notNull.message=City can not be empty
+form.field.city.error.notEmpty.message=City can not be empty
+form.field.location.error.notNull.message=Location can not be empty
+form.field.location.error.notEmpty.message=Location can not be empty
+form.field.address.error.notNull.message=Address can not be empty
+form.field.address.error.notEmpty.message=Address can not be empty
+form.field.description.error.notNull.message=Description can not be empty
+form.field.description.error.notEmpty.message=Description can not be empty
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
