--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -44,6 +44,25 @@ form.field.currentPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0
 form.field.currentPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Has\u0142o nieprawid\u0142owe
 form.field.roles.error.notEmpty.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
+# events
+form.field.name.error.notNull.message=Nazwa nie mo\u017Ce by\u0107 pusta
+form.field.name.error.notEmpty.message=Nazwa nie mo\u017Ce by\u0107 pusta
+form.field.eventType.error.notNull.message=Typ wydarzenia nie mo\u017Ce by\u0107 pusty
+form.field.eventType.error.notEmpty.message=Typ wydarzenia nie mo\u017Ce by\u0107 pusty
+form.field.dateTime.error.notNull.message=Data i godzina nie mo\u017Ce by\u0107 pusta
+form.field.dateTime.error.notEmpty.message=Data i godzina nie mo\u017Ce by\u0107 pusta
+form.field.language.error.notNull.message=J\u0119zyk nie mo\u017Ce by\u0107 pusty
+form.field.language.error.notEmpty.message=J\u0119zyk nie mo\u017Ce by\u0107 pusty
+form.field.admission.error.notNull.message=Wst\u0119p nie mo\u017Ce by\u0107 pusty
+form.field.admission.error.notEmpty.message=Wst\u0119p nie mo\u017Ce by\u0107 pusty
+form.field.city.error.notNull.message=Miasto nie mo\u017Ce by\u0107 puste
+form.field.city.error.notEmpty.message=Miasto nie mo\u017Ce by\u0107 puste
+form.field.location.error.notNull.message=Lokacja nie mo\u017Ce by\u0107 pusta
+form.field.location.error.notEmpty.message=Lokacja nie mo\u017Ce by\u0107 pusta
+form.field.address.error.notNull.message=Adres nie mo\u017Ce by\u0107 pusty
+form.field.address.error.notEmpty.message=Adres nie mo\u017Ce by\u0107 pusty
+form.field.description.error.notNull.message=Opis nie mo\u017Ce by\u0107 pusty
+form.field.description.error.notEmpty.message=Opis nie mo\u017Ce by\u0107 pusty
 # exceptions
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
 exception.AppUserNotFoundException.message=U\u017Cytkownik nie zosta\u0142 znaleziony
