Added event image

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -68,6 +68,7 @@ exception.DefaultProfileImageNotFoundException.message=Failed to create an accou
 exception.AppUserNotFoundException.message=User was not found
 exception.EventNotFoundException.message=Event was not found
 exception.CityNotFoundException.message=It looks like this page does not exist.
+exception.DefaultEventImageNotFoundException.message=Failed to create an event due to an error. Please try again later.
 exception.otherException.message=Internal server error
 # alert
 admin.adminUserAccountEditForm.accountUpdated.message=User account has been updated
