--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -64,6 +64,7 @@ form.field.address.error.notEmpty.message=Address can not be empty
 form.field.description.error.notNull.message=Description can not be empty
 form.field.description.error.notEmpty.message=Description can not be empty
 # exceptions
+exception.AccessDeniedException.message=Access is denied
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
 exception.AppUserNotFoundException.message=User was not found
 exception.EventNotFoundException.message=Event was not found
