Added DateTime validation annotation to check if date or date and time is valid

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -63,6 +63,9 @@ form.field.address.error.notNull.message=Address can not be empty
 form.field.address.error.notEmpty.message=Address can not be empty
 form.field.description.error.notNull.message=Description can not be empty
 form.field.description.error.notEmpty.message=Description can not be empty
+# annotations
+validation.annotation.DateTime.date.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
+validation.annotation.DateTime.dateTime.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
 # exceptions
 exception.AccessDeniedException.message=Access is denied
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
