--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -63,6 +63,9 @@ form.field.address.error.notNull.message=Adres nie mo\u017Ce by\u0107 pusty
 form.field.address.error.notEmpty.message=Adres nie mo\u017Ce by\u0107 pusty
 form.field.description.error.notNull.message=Opis nie mo\u017Ce by\u0107 pusty
 form.field.description.error.notEmpty.message=Opis nie mo\u017Ce by\u0107 pusty
+# annotations
+validation.annotation.DateTime.date.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
+validation.annotation.DateTime.dateTime.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
 # exceptions
 exception.AccessDeniedException.message=Dost\u0119p zabroniony
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
