Added UniqueEmail validation annotation to check if email is unique

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -64,6 +64,7 @@ form.field.address.error.notEmpty.message=Address can not be empty
 form.field.description.error.notNull.message=Description can not be empty
 form.field.description.error.notEmpty.message=Description can not be empty
 # annotations
+validation.annotation.UniqueEmail.message=This email address is already being used
 validation.annotation.DateTime.date.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
 validation.annotation.DateTime.dateTime.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
 # exceptions
