--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -64,6 +64,7 @@ form.field.address.error.notEmpty.message=Adres nie mo\u017Ce by\u0107 pusty
 form.field.description.error.notNull.message=Opis nie mo\u017Ce by\u0107 pusty
 form.field.description.error.notEmpty.message=Opis nie mo\u017Ce by\u0107 pusty
 # annotations
+validation.annotation.UniqueEmail.message=Ten adres email jest ju\u017C w u\u017Cyciu
 validation.annotation.DateTime.date.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
 validation.annotation.DateTime.dateTime.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
 # exceptions
