Added annotation Value to all dtos in appuser package

--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -5,44 +5,30 @@ loginForm.exception.BadCredentialsException.message=Nieprawid\u0142owa nazwa u\u
 loginForm.exception.DisabledException.message=Konto u\u017Cytkownika nie zosta\u0142o jeszcze aktywowane
 loginForm.exception.LockedException.message=Konto u\u017Cytkownika zosta\u0142o zablokowane
 loginForm.exception.unknownError.message=Nieznany b\u0142\u0105d
-# other forms
-form.field.firstName.error.notNull.message=Imi\u0119 nie mo\u017Ce by\u0107 puste
-form.field.firstName.error.notEmpty.message=Imi\u0119 nie mo\u017Ce by\u0107 puste
+# users
+form.field.firstName.error.notBlank.message=Imi\u0119 nie mo\u017Ce by\u0107 puste
 form.field.firstName.error.size.message=Imi\u0119 musi mie\u0107 przynajmniej {min} znaki i nie wi\u0119cej ni\u017C {max}
-form.field.lastName.error.notNull.message=Nazwisko nie mo\u017Ce by\u0107 puste
-form.field.lastName.error.notEmpty.message=Nazwisko nie mo\u017Ce by\u0107 puste
+form.field.lastName.error.notBlank.message=Nazwisko nie mo\u017Ce by\u0107 puste
 form.field.lastName.error.size.message=Nazwisko musi mie\u0107 przynajmniej {min} znaki i nie wi\u0119cej ni\u017C {max}
-form.field.dateOfBirth.error.notNull.message=Data urodzenia nie mo\u017Ce by\u0107 pusta
-form.field.dateOfBirth.error.notEmpty.message=Data urodzenia nie mo\u017Ce by\u0107 pusta
-form.field.email.error.notNull.message=Email nie mo\u017Ce by\u0107 pusty
-form.field.email.error.notEmpty.message=Email nie mo\u017Ce by\u0107 pusty
+form.field.email.error.notBlank.message=Email nie mo\u017Ce by\u0107 pusty
 form.field.email.error.incorrectEmail.message=Adres email jest nieprawid\u0142owy
-form.field.email.error.emailIsInUse.message=Ten adres email jest ju\u017C w u\u017Cyciu
-form.field.password.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.password.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.password.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.password.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
-form.field.confirmPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.confirmPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmPassword.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.confirmPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Podane has\u0142a r\u00F3\u017Cni\u0105 si\u0119 od siebie
-form.field.image.error.invalidFileType.message=Dozwolone s\u0105 tylko pliki z nast\u0119puj\u0105cymi rozszerzeniami: jpeg, jpg, png
-form.field.image.error.invalidImageSize.message=Obraz jest za du\u017Cy, maksymalne wymiary to {width}x{height} pikseli
-form.field.image.error.invalidFileSize.message=Rozmiar pliku jest wi\u0119kszy ni\u017C 2 MB
 form.field.city.error.size.message=Miasto mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
 form.field.bio.error.size.message=Biogram mo\u017Ce mie\u0107 maksymalnie {max} znak\u00F3w
-form.field.adminPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.adminPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.adminPassword.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.adminPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
-form.field.newPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.newPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.newPassword.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.newPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
-form.field.confirmNewPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.confirmNewPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.confirmNewPassword.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.confirmNewPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
-form.field.currentPassword.error.notNull.message=Has\u0142o nie mo\u017Ce by\u0107 puste
-form.field.currentPassword.error.notEmpty.message=Has\u0142o nie mo\u017Ce by\u0107 puste
+form.field.currentPassword.error.notBlank.message=Has\u0142o nie mo\u017Ce by\u0107 puste
 form.field.currentPassword.error.size.message=Has\u0142o musi mie\u0107 przynajmniej {min} znak\u00F3w i nie wi\u0119cej ni\u017C {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Has\u0142o nieprawid\u0142owe
+form.field.roles.error.notNull.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
 form.field.roles.error.notEmpty.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
 # events
 form.field.name.error.notNull.message=Nazwa nie mo\u017Ce by\u0107 pusta
@@ -67,6 +53,9 @@ form.field.description.error.notEmpty.message=Opis nie mo\u017Ce by\u0107 pusty
 validation.annotation.UniqueEmail.message=Ten adres email jest ju\u017C w u\u017Cyciu
 validation.annotation.DateTime.date.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
 validation.annotation.DateTime.dateTime.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
+validation.annotation.Image.invalidFileType.message=Dozwolone s\u0105 tylko pliki z nast\u0119puj\u0105cymi rozszerzeniami: jpeg, jpg, png
+validation.annotation.Image.invalidImageSize.message=Obraz jest za du\u017Cy, maksymalne wymiary to {width}x{height} pikseli
+validation.annotation.Image.invalidFileSize.message=Rozmiar pliku jest wi\u0119kszy ni\u017C 2 MB
 # exceptions
 exception.AccessDeniedException.message=Dost\u0119p zabroniony
 exception.DefaultProfileImageNotFoundException.message=Nie uda\u0142o si\u0119 utworzy\u0107 konta z powodu b\u0142\u0119du. Spr\u00F3buj ponownie p\u00F3\u017Aniej.
