--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -5,44 +5,30 @@ loginForm.exception.BadCredentialsException.message=Invalid username or password
 loginForm.exception.DisabledException.message=User account has not been activated yet
 loginForm.exception.LockedException.message=User account has been blocked
 loginForm.exception.unknownError.message=Unknown error
-# other forms
-form.field.firstName.error.notNull.message=First name can not be empty
-form.field.firstName.error.notEmpty.message=First name can not be empty
+# users
+form.field.firstName.error.notBlank.message=First name can not be empty
 form.field.firstName.error.size.message=First name must be at least {min} characters long and not more than {max}
-form.field.lastName.error.notNull.message=Last name can not be empty
-form.field.lastName.error.notEmpty.message=Last name can not be empty
+form.field.lastName.error.notBlank.message=Last name can not be empty
 form.field.lastName.error.size.message=Last name must be at least {min} characters long and not more than {max}
-form.field.dateOfBirth.error.notNull.message=Date of birth can not be empty
-form.field.dateOfBirth.error.notEmpty.message=Date of birth can not be empty
-form.field.email.error.notNull.message=Email can not be empty
-form.field.email.error.notEmpty.message=Email can not be empty
+form.field.email.error.notBlank.message=Email can not be empty
 form.field.email.error.incorrectEmail.message=Email address is incorrect
-form.field.email.error.emailIsInUse.message=This email address is already being used
-form.field.password.error.notNull.message=Password can not be empty
-form.field.password.error.notEmpty.message=Password can not be empty
+form.field.password.error.notBlank.message=Password can not be empty
 form.field.password.error.size.message=Password must be at least {min} characters long and not more than {max}
-form.field.confirmPassword.error.notNull.message=Password can not be empty
-form.field.confirmPassword.error.notEmpty.message=Password can not be empty
+form.field.confirmPassword.error.notBlank.message=Password can not be empty
 form.field.confirmPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.confirmPassword.error.unmatchedPasswordValue.message=Typed passwords do not match
-form.field.image.error.invalidFileType.message=Only files with the following extensions are allowed: jpeg, jpg, png
-form.field.image.error.invalidImageSize.message=The image is too large, the maximum dimensions are {width}x{height} pixels
-form.field.image.error.invalidFileSize.message=File size is greater than 2 MB
 form.field.city.error.size.message=City can be up to {max} characters long
 form.field.bio.error.size.message=Bio can be up to {max} characters long
-form.field.adminPassword.error.notNull.message=Password can not be empty
-form.field.adminPassword.error.notEmpty.message=Password can not be empty
+form.field.adminPassword.error.notBlank.message=Password can not be empty
 form.field.adminPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
-form.field.newPassword.error.notNull.message=Password can not be empty
-form.field.newPassword.error.notEmpty.message=Password can not be empty
+form.field.newPassword.error.notBlank.message=Password can not be empty
 form.field.newPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
-form.field.confirmNewPassword.error.notNull.message=Password can not be empty
-form.field.confirmNewPassword.error.notEmpty.message=Password can not be empty
+form.field.confirmNewPassword.error.notBlank.message=Password can not be empty
 form.field.confirmNewPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
-form.field.currentPassword.error.notNull.message=Password can not be empty
-form.field.currentPassword.error.notEmpty.message=Password can not be empty
+form.field.currentPassword.error.notBlank.message=Password can not be empty
 form.field.currentPassword.error.size.message=Password must be at least {min} characters long and not more than {max}
 form.field.currentPassword.error.invalidCurrentPassword.message=Invalid password
+form.field.roles.error.notNull.message=User has to have at least one role
 form.field.roles.error.notEmpty.message=User has to have at least one role
 # events
 form.field.name.error.notNull.message=Name can not be empty
@@ -67,6 +53,9 @@ form.field.description.error.notEmpty.message=Description can not be empty
 validation.annotation.UniqueEmail.message=This email address is already being used
 validation.annotation.DateTime.date.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
 validation.annotation.DateTime.dateTime.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
+validation.annotation.Image.invalidFileType.message=Only files with the following extensions are allowed: jpeg, jpg, png
+validation.annotation.Image.invalidImageSize.message=The image is too large, the maximum dimensions are {width}x{height} pixels
+validation.annotation.Image.invalidFileSize.message=File size is greater than 2 MB
 # exceptions
 exception.AccessDeniedException.message=Access is denied
 exception.DefaultProfileImageNotFoundException.message=Failed to create an account due to an error. Please try again later.
