Added annotation Value to all dtos in event package

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -31,24 +31,15 @@ form.field.currentPassword.error.invalidCurrentPassword.message=Invalid password
 form.field.roles.error.notNull.message=User has to have at least one role
 form.field.roles.error.notEmpty.message=User has to have at least one role
 # events
-form.field.name.error.notNull.message=Name can not be empty
-form.field.name.error.notEmpty.message=Name can not be empty
+form.field.name.error.notBlank.message=Name can not be empty
 form.field.eventType.error.notNull.message=Event type can not be empty
-form.field.eventType.error.notEmpty.message=Event type can not be empty
 form.field.dateTime.error.notNull.message=Date and time can not be empty
-form.field.dateTime.error.notEmpty.message=Date and time can not be empty
-form.field.language.error.notNull.message=Language can not be empty
-form.field.language.error.notEmpty.message=Language can not be empty
+form.field.language.error.notBlank.message=Language can not be empty
 form.field.admission.error.notNull.message=Admission can not be empty
-form.field.admission.error.notEmpty.message=Admission can not be empty
-form.field.city.error.notNull.message=City can not be empty
-form.field.city.error.notEmpty.message=City can not be empty
-form.field.location.error.notNull.message=Location can not be empty
-form.field.location.error.notEmpty.message=Location can not be empty
-form.field.address.error.notNull.message=Address can not be empty
-form.field.address.error.notEmpty.message=Address can not be empty
-form.field.description.error.notNull.message=Description can not be empty
-form.field.description.error.notEmpty.message=Description can not be empty
+form.field.city.error.notBlank.message=City can not be empty
+form.field.location.error.notBlank.message=Location can not be empty
+form.field.address.error.notBlank.message=Address can not be empty
+form.field.description.error.notBlank.message=Description can not be empty
 # annotations
 validation.annotation.UniqueEmail.message=This email address is already being used
 validation.annotation.DateTime.date.invalidFormat.message=Date has an invalid format (yyyy-MM-dd)
