--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -31,24 +31,15 @@ form.field.currentPassword.error.invalidCurrentPassword.message=Has\u0142o niepr
 form.field.roles.error.notNull.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
 form.field.roles.error.notEmpty.message=U\u017Cytkownik musi mie\u0107 przynajmniej jedn\u0105 rol\u0119
 # events
-form.field.name.error.notNull.message=Nazwa nie mo\u017Ce by\u0107 pusta
-form.field.name.error.notEmpty.message=Nazwa nie mo\u017Ce by\u0107 pusta
+form.field.name.error.notBlank.message=Nazwa nie mo\u017Ce by\u0107 pusta
 form.field.eventType.error.notNull.message=Typ wydarzenia nie mo\u017Ce by\u0107 pusty
-form.field.eventType.error.notEmpty.message=Typ wydarzenia nie mo\u017Ce by\u0107 pusty
 form.field.dateTime.error.notNull.message=Data i godzina nie mo\u017Ce by\u0107 pusta
-form.field.dateTime.error.notEmpty.message=Data i godzina nie mo\u017Ce by\u0107 pusta
-form.field.language.error.notNull.message=J\u0119zyk nie mo\u017Ce by\u0107 pusty
-form.field.language.error.notEmpty.message=J\u0119zyk nie mo\u017Ce by\u0107 pusty
+form.field.language.error.notBlank.message=J\u0119zyk nie mo\u017Ce by\u0107 pusty
 form.field.admission.error.notNull.message=Wst\u0119p nie mo\u017Ce by\u0107 pusty
-form.field.admission.error.notEmpty.message=Wst\u0119p nie mo\u017Ce by\u0107 pusty
-form.field.city.error.notNull.message=Miasto nie mo\u017Ce by\u0107 puste
-form.field.city.error.notEmpty.message=Miasto nie mo\u017Ce by\u0107 puste
-form.field.location.error.notNull.message=Lokacja nie mo\u017Ce by\u0107 pusta
-form.field.location.error.notEmpty.message=Lokacja nie mo\u017Ce by\u0107 pusta
-form.field.address.error.notNull.message=Adres nie mo\u017Ce by\u0107 pusty
-form.field.address.error.notEmpty.message=Adres nie mo\u017Ce by\u0107 pusty
-form.field.description.error.notNull.message=Opis nie mo\u017Ce by\u0107 pusty
-form.field.description.error.notEmpty.message=Opis nie mo\u017Ce by\u0107 pusty
+form.field.city.error.notBlank.message=Miasto nie mo\u017Ce by\u0107 puste
+form.field.location.error.notBlank.message=Lokacja nie mo\u017Ce by\u0107 pusta
+form.field.address.error.notBlank.message=Adres nie mo\u017Ce by\u0107 pusty
+form.field.description.error.notBlank.message=Opis nie mo\u017Ce by\u0107 pusty
 # annotations
 validation.annotation.UniqueEmail.message=Ten adres email jest ju\u017C w u\u017Cyciu
 validation.annotation.DateTime.date.invalidFormat.message=Data ma nieprawid\u0107owy format (yyyy-MM-dd)
